--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/glfw/glfw
 [submodule "Haketon/vendor/ImGuizmo"]
 	path = Haketon/vendor/ImGuizmo
-	url = https://github.com/TheCherno/ImGuizmo
+	url = https://github.com/sinisastevanovic/ImGuizmo
 [submodule "Haketon/vendor/imgui"]
 	path = Haketon/vendor/imgui
 	url = https://github.com/ocornut/imgui
